--- a/Learning Swift/Base.lproj/Main.storyboard
+++ b/Learning Swift/Base.lproj/Main.storyboard
@@ -438,6 +438,9 @@
                                                 </label>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dpS-Qm-Kui">
                                                     <rect key="frame" x="343" y="6.5" width="51" height="31"/>
+                                                    <connections>
+                                                        <action selector="changeTimerState:" destination="A31-bq-QiJ" eventType="valueChanged" id="UC8-qO-QYa"/>
+                                                    </connections>
                                                 </switch>
                                             </subviews>
                                             <constraints>
@@ -478,7 +481,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="t6V-im-pdq" kind="show" id="cMd-AB-dSw"/>
+                                            <segue destination="t6V-im-pdq" kind="show" identifier="selectTimeVC" id="cMd-AB-dSw"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="0yh-3T-tAk">
@@ -492,6 +495,9 @@
                                                     <rect key="frame" x="107.5" y="6.5" width="199" height="31"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" title="Настройки по умолчанию"/>
+                                                    <connections>
+                                                        <action selector="resetSettings:" destination="A31-bq-QiJ" eventType="touchUpInside" id="GcV-zp-Q7K"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -509,6 +515,10 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Настройки" id="chO-HN-Ci4"/>
+                    <connections>
+                        <outlet property="switchTimer" destination="dpS-Qm-Kui" id="WuY-R2-rEz"/>
+                        <outlet property="timeGameLabel" destination="a7f-EP-slG" id="ip4-cb-huJ"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YLb-mS-sMs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
